Fix junit jupiter version conflicts
- improve slightly on strategy parser